--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# SSL Certificates (local development)
+*.crt
+*.key
+*.pfx
+localhost.*
+
+# Temporary files
+generate-certs.js
+temp/
+*.tmp
